테스트: centos 8 시험중? 백업?

--- a/src/Makefile
+++ b/src/Makefile
@@ -18,8 +18,10 @@ KDIR ?= /lib/modules/`uname -r`/build
 
 MINC := -I$(PWD)/redirfs
 
+#IGN_WARN := Wno-implicit-function-declaration
+
 modules:
-	$(MAKE) -C $(KDIR) M=$(PWD) EXTRA_CFLAGS=$(MINC) modules
+	$(MAKE) -C $(KDIR) M=$(PWD) EXTRA_CFLAGS='$(MINC) $(IGN_WARN) $(DEF)' modules
 
 modules_debug:
 	$(MAKE) -C $(KDIR) M=$(PWD) EXTRA_CFLAGS='$(MINC) -v -O1 -g -DRFS_DBG -DDEBUG' modules
